# PROJECT-510

./: 510.cpp  510.hpp  CMakeLists.txt  README.md  client  client.cpp  client_ui.cpp  main.cpp  main_code.cpp  server.cpp  server_ui.cpp
include/: 510.hpp  user_ops.hpp
non-ui elements/: client_legacy.cpp  server_legacy.cpp
src/: 510.cpp  main.cpp  network.cpp  ui.cpp  user_interface.cpp  user_ops.cpp
